add analyze slug
